# adrda

./: .gitignore  CLAUDE.md  README.md  manage.py  pyproject.toml  quantum_scrapper.py  temp.py
_old_base/: analise.py
core/: settings.py  urls.py
docs/: HANDOFF-proxima-sessao.md  api-quantum.md  progresso.md
docs/superpowers/plans/: 2026-05-26-refatoracao-backend-fundacao.md  2026-05-28-coleta-completa-e-retornos.md  2026-05-28-detalhe-ativo-carteira.md
docs/superpowers/specs/: 2026-05-26-refatoracao-backend-fundacao-design.md  2026-05-28-coleta-completa-e-retornos-design.md  2026-05-28-detalhe-ativo-carteira-design.md  2026-05-28-redesign-tela-ativos-design.md  2026-05-28-relatorio-processamento-local-design.md
scrapper/: admin.py  analise.py  apps.py  models.py  services.py  urls.py  views.py
scrapper/migrations/: 0001_initial.py  0002_cotacaodiaria.py  0002_seed_indices.py  0003_alter_cotacaodiaria_options.py  0003_carteirafundo_posicaocarteira_and_more.py  0004_carteirafundo_agregacoes_posicaocarteira_valor.py  0005_alter_job_tipo.py  0006_cotacao_decimal_e_retornos.py
scrapper/quantum/: carteira_html.py  catalogo.py  client.py  parsers.py  schemas.py
scrapper/templates/scrapper/: ativos.html  base.html  detalhe.html  index.html  relatorio.html
tests/: test_analise.py  test_models.py  test_quantum_scrapper.py  test_services.py  test_views.py
tests/quantum/: test_carteira_html.py  test_catalogo.py  test_client.py  test_parsers.py  test_schemas.py
