[project]
name = "quantum-scrapper"
version = "0.1.0"
description = "Scrapper e interface web para o Quantum Comparador de Ativos"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "trio>=0.26",
    "loguru>=0.7",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-dateutil>=2.9",
    "django>=5.0",
    "quantstats>=0.0.62",
    "plotly>=5.22",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
